# find10-ideascale-importer

./: .args  .gitignore  Earthfile  README.md  main.py  pyproject.toml  requirements.txt  test.py
examples/: assessments.csv  proposals.json  proposals_old.json  random-reviews-generator.py  slug-urls.json  widthdrawn.csv
scripts/: random-reviews-generator.py  update-proposals-urls.py
take_snapshot/: __init__.py  main.py
templates/: challenges_format.json  funds_format.json  proposals_extra_fields.json  proposals_format.json  proposals_map.json  reviews_format.json  tags.json
