[tool.poetry]
name = "take-snapshot"
version = "1.0.0"
description = "Take snapshot of IdeaScale data and generate artifacts for deployment."
authors = ["Lucio Baglione <coire1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "take_snapshot"}]

[tool.poetry.dependencies]
python = "^3.11"
markdownify = "0.11.2"
numpy = "1.23.1"
pandas = "1.4.3"
requests = "2.31.0"
typer = "0.6.1"
rich = "12.5.1"
strict-rfc3339 = "0.7"
urllib3 = "2.0.7"

[tool.poetry.scripts]
take-snapshot = "take_snapshot.main:app"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
